--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Re:Fragment ~Summer Pinball~</title>
+<title>Re:Fragment ~Songkran Pinball~</title>
 <script src="enchant.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
